--- a/14.Airline-analytics/airline_analytics.ipynb
+++ b/14.Airline-analytics/airline_analytics.ipynb
@@ -4,16 +4,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Вы аналитик российской авиакомпании F9, выполняющей внутренние пассажирские перевозки. Важно понять предпочтения пользователей, покупающих билеты на разные направления.\n",
-    "\n",
-    "Предстоит изучить базу данных и проанализировать спрос пассажиров на рейсы в города, где проходят крупнейшие культурные фестивали."
+    "# 1.Получение данных запросами SQL"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Аналитика"
+    "```SQL\n",
+    "SELECT  \n",
+    "    aircrafts.model as model,  \n",
+    "    count(flights.departure_time) as flights_amount  \n",
+    "FROM  \n",
+    "    aircrafts  \n",
+    "INNER JOIN flights ON aircrafts.aircraft_code = flights.aircraft_code  \n",
+    "WHERE  \n",
+    "    cast(flights.departure_time as date) between '2018-09-01' and '2018-09-30'  \n",
+    "GROUP BY  \n",
+    "    model;  \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```SQL\n",
+    "SELECT\n",
+    "    SUB.city,  \n",
+    "    avg(SUB.flights_count) as average_flights  \n",
+    "FROM  \n",
+    "    (SELECT  \n",
+    "        count(flights.flight_id) as flights_count,  \n",
+    "        extract(day from flights.arrival_time :: date) as day,  \n",
+    "        airports.city as city  \n",
+    "     FROM  \n",
+    "         airports  \n",
+    "     INNER JOIN flights on airports.airport_code = flights.arrival_airport  \n",
+    "     WHERE  \n",
+    "         flights.arrival_time :: date between '2018-08-01' and '2018-08-31'  \n",
+    "     GROUP BY  \n",
+    "         city,  \n",
+    "         day  \n",
+    "       ) as SUB  \n",
+    "GROUP BY  \n",
+    "    city  \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Аналитика"
    ]
   },
   {
@@ -563,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Проверка гипотезы"
+    "# 3. Проверка гипотезы"
    ]
   },
   {
