--- a/14.Airline-analytics/airline_analytics.ipynb
+++ b/14.Airline-analytics/airline_analytics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.Получение данных запросами SQL"
+    "# 1.Сбор данных средствами SQL"
    ]
   },
   {
