--- a/07.Customer-outflow/customer_outflow.ipynb
+++ b/07.Customer-outflow/customer_outflow.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Описание проекта\n",
+    "Из банка стали уходить клиенты. Каждый месяц. Немного, но заметно. Банковские маркетологи посчитали: сохранять текущих клиентов дешевле, чем привлекать новых.  \n",
+    "Нужно спрогнозировать, уйдёт клиент из банка в ближайшее время или нет. Предоставлены исторические данные о поведении клиентов и расторжении договоров с банком.  \n",
+    "Источник данных: https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Подготовка данных"
    ]
   },
