--- a/08.Oil-regions/oil_regions.ipynb
+++ b/08.Oil-regions/oil_regions.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Описание проекта\n",
+    "Нефтедобывающей компании нужно решить, где бурить новую скважину.  \n",
+    "Шаги для выбора локации обычно такие:  \n",
+    "В избранном регионе собирают характеристики для скважин: качество нефти и объём её запасов;  \n",
+    "Строят модель для предсказания объёма запасов в новых скважинах;  \n",
+    "Выбирают скважины с самыми высокими оценками значений;  \n",
+    "Определяют регион с максимальной суммарной прибылью отобранных скважин.  \n",
+    "Предоставлены пробы нефти в трёх регионах. Характеристики для каждой скважины в регионе уже известны. Необходимо построить модель для определения региона, где добыча принесёт наибольшую прибыль. Возможную прибыль и риски нужно проанализировать техникой Bootstrap."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Загрузка и подготовка данных"
    ]
   },
